--- a/index.html
+++ b/index.html
@@ -139,6 +139,6 @@
     <!--Phaser-->
     <script src= "lib/phaser_v87/phaser.min.js"></script>
     <!--Script-->
-    <script type = "module" src="script.js"></script>
+    <script type = "module" src="src/script.js"></script>
 </body>
 </html>
