--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <section id="levelSelectScreen">
             <div id="imageDiv">
                 <canvas id = "levelScreenshot_canvas">
-                    <img id="forestScreenshot" value= "0" src="assets/levelScreenshots/level0.jpg" alt="levelScreenshot"/>
-                    <img id="ruinsScreenshot" value= "1" src="assets/levelScreenshots/level1.jpg" alt="levelScreenshot"/>
-                    <img id="cryptScreenshot" value= "2" src="assets/levelScreenshots/level2.jpg" alt="levelScreenshot"/>
-                    <img id="cemeteryScreenshot" value= "3" src="assets/levelScreenshots/level3.jpg" alt="levelScreenshot"/>
+                    <img id="forestScreenshot" value= "0" src="assets/levelScreenshots/level0.png" alt="levelScreenshot"/>
+                    <img id="ruinsScreenshot" value= "1" src="assets/levelScreenshots/level1.png" alt="levelScreenshot"/>
+                    <img id="cryptScreenshot" value= "2" src="assets/levelScreenshots/level2.png" alt="levelScreenshot"/>
+                    <img id="cemeteryScreenshot" value= "3" src="assets/levelScreenshots/level3.png" alt="levelScreenshot"/>
 
                 </canvas>
                 <p id="imageDescription">forest</p>
@@ -62,13 +62,13 @@
             <div id = "buttonsLayer">
                 <div id='leftControlButtons'>
                     <button id='left' class='playButtons'>l</button>
-                        <button id='right' class='playButtons'>r</button>
-                        <button id='down' class='playButtons'>d</button>  
+                    <button id='right' class='playButtons'>r</button>
                 </div>
                 <div id='rightControlButtons'>
                     <button id='special' class='playButtons' >y</button>
                     <button id='rangedShot' class='playButtons'>a</button>
                     <button id='up' class='playButtons'>u</button>
+                    <button id='down' class='playButtons'>d</button>
                     <button id='slash' class='playButtons'>s</button>
                 </div>
                 <div id="go-to">
