--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <section id="menuScreen">
             <div id="button">
                 <button id="menu_playBtn">PLAY</button>
+                <button id="menu_continueBtn">CONTINUE</button>
                 <button id="menu_optionsBtn">OPTION</button>   
                 <button id="menu_leaderboardBtn">LEADERBOARD</button>
                 <button id="menu_tutorialBtn">TUTORIAL</button>   
@@ -88,6 +89,8 @@
         <section id="pauseScreen">
             <button id="pause_resumeBtn">RESUME</button>
             <button id="pause_restartBtn">RESTART</button>
+            <button id="pause_saveBtn">SAVE</button>
+            <button id="pause_restartFromLastCheckpointBtn">CHECKPOINT</button>
             <button id="pause_menuBtn">MENU</button>
         </section>
         <!-- RESTART CONFIRMATION DIALOGUE BOX -->
