--- a/index.html
+++ b/index.html
@@ -80,11 +80,7 @@
             </div>
         </section>
         <!--CURTAIN-->
-        <section id="playSceneCurtain">
-                <div id= "message">
-                   -- <p id = "transitionToPlayMessage">Curtains Rolling...</p>  
-                </div>
-        </section>
+        <section id="playSceneCurtain"> </section>
         <!--PAUSE SCREEN-->
         <section id="pauseScreen">
             <button id="pause_resumeBtn">RESUME</button>
