--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
 
             <div id = "buttonsLayer">
                 <div id='leftControlButtons'>
-                    <button id='left' class='playButtons'>l</button>
-                    <button id='right' class='playButtons'>r</button>
-                    <button id='down' class='playButtons'>d</button>
+                    <button id='left' class='playButtons'><</button>
+                    <button id='right' class='playButtons'>></button>
                 </div>
                 <div id='rightControlButtons'>
-                    <button id='rangedShot' class='playButtons'>a</button>
+                    <button id='rangedShot' class='playButtons'>🔴</button>
                     <button id='up' class='playButtons'>u</button>
-                    <button id='slash' class='playButtons'>s</button>
+                    <button id='down' class='playButtons'>d</button> 
+                    <button id='slash' class='playButtons'>⚔️</button>
                 </div>
                 <div id="go-to">
                     <button id="play_fullscreenBtn">fullscreen</button>
@@ -136,6 +136,8 @@
 
     <!--Phaser-->
     <script src= "lib/phaser_v87/phaser.min.js"></script>
+    <script src= "lib/plugins/rexuiplugin.min.js"></script>
+ 
     <!--Script-->
     <script type = "module" src="src/script.js"></script>
 </body>
